Laravel-mix Sourcemap Fix. File cleanup
Fixed issue with Laravel-mix not sourcemapping files.

Removed some unnecessary styles, and images left over.

Added react support

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -1,17 +1,16 @@
 @import "common/variables";
 
-// common
-@import "common/mixins";
+// Common
 @import "common/fonts";
 
-// sacffolding/primary
+// Scaffolding/primary
 @import "common/reset";
 
 // Default WordPress CSS
 @import "default/wordpress";
 
-// components
+// Components
 
-// template parts
+// Template Parts
 
-// templates
+// Templates
